# omicron

./: .gitignore  LICENSE.txt  README.md  Teensy.code-workspace  sdkconfig  vim.exe.stackdump
PandaUARTHack/: PandaUARTHack.ino
Teensy/: CMakeLists.txt  README.md  platformio.ini
Teensy/lib/: README
Teensy/lib/Cam/: Cam.cpp  Cam.h
Teensy/lib/Config/: Config.h
Teensy/lib/I2C/: I2C.cpp  I2C.h
Teensy/lib/IMU/: IMU.cpp  IMU.h
Teensy/lib/LRF/: LRF.cpp  LRF.h
Teensy/lib/LightSensor/: LightSensor.cpp  LightSensor.h
Teensy/lib/LightSensorArray/: LightSensorArray.cpp  LightSensorArray.h
Teensy/lib/LightSensorController/: LightSensorController.cpp  LightSensorController.h
Teensy/lib/Move/: Move.cpp  Move.h
Teensy/lib/PID/: PID.cpp  PID.h
Teensy/lib/Pinlist/: Pinlist.h
Teensy/lib/Playmode/: Playmode.cpp  Playmode.h
Teensy/lib/Utils/: Utils.cpp  Utils.h
Teensy/lib/Vector/: Vector.cpp  Vector.h
Teensy/lib/i2c_t3/: i2c_t3.cpp
Teensy/lib/nanopb/: CMakeLists.txt  UART.pb.c  UART.pb.h  bluetooth.pb.h  bluetooth.proto  i2c.pb.c  i2c.pb.h  i2c.proto  wirecomms.pb.c  wirecomms.proto
Teensy/lib/t3spi/: t3spi.cpp  t3spi.h
Teensy/src/: main.cpp
atmega/: CMakeLists.txt  README.md  platformio.ini
atmega/lib/Config/: Config.h
atmega/lib/Motor/: Motor.cpp  Motor.h
atmega/lib/mouse/: mouse.cpp  mouse.h
atmega/src/: main.cpp
components/: README.md
components/bno080/: CMakeLists.txt  sh2.c  sh2_hal_esp.c  sh2_hal_impl.h  shtp.c
components/goap/: CMakeLists.txt  goap.h  goap_omicron.h
components/libraries/: CMakeLists.txt
components/nanopb/: i2c.pb.c  i2c.pb.h  i2c.proto
components/wren/: CMakeLists.txt
designs/: README.md
docs/: Algorithms&Stuff.c  Algorithms&Stuff.h  GOAP planning.md  GPIO speeds.txt  Old multi threaded I2C code.c  README.md
documentation/: README.md  mkdocs.yml
documentation/docs/: about.md  communication.md  electrical_design.md  fsm.md  future_work.md  index.md  lowlevel.md  omicam.md  omicontrol.md  open_source.md  open_source_release.md  protobuf.md  sbc.md  strategy.md  structural_design.md
documentation/site/: 404.html  index.html  search.html  sitemap.xml
documentation/site/about/: index.html
documentation/site/search/: search_index.json
esp32/: .gitignore  README.md  fm.bat  m.bat  sdkconfig  sdkconfig.old
esp32/components/: README.md
esp32/docs/: Algorithms&Stuff.c  Algorithms&Stuff.h  Dribble state other checks.txt  GOAP workflow.txt  GPIO speeds.txt  Steering behaviour planning.txt  THE ACTUAL CRASH WE GOT IT LIVE.txt  c_properties_template.txt
esp32/main/: CMakeLists.txt  README.md  avoid.c  avoid.h  bluetooth_manager.c  buzzer.c  buzzer.h  cam.c  cam.h  comms_bluetooth.c  comms_bluetooth.h  comms_i2c.c  comms_i2c.h  comms_uart.c  comms_uart.h  defines.c  defines.h  fsm.c  fsm.h  isosb.c  isosb.h  licenseheader.txt  lsavoid.c  lsavoid.h  lstemp.c  lstemp.h  main.c  motor.c  motor.h  movavg.c  movavg.h  path_following.c  path_following.h  pid.c  pid.h  states.h  states_attack.c  states_defence.c  states_general.c  utils.c  (+1 more)
esp32/scripts/: closest_point.py  localisation_test.py
main/: CMakeLists.txt  bluetooth_manager.c  cam.c  cam.h  comms_bluetooth.c  comms_i2c.c  comms_i2c.h  comms_uart.c  comms_wireless.c  comms_wireless.h  comms_wireless_manager.c  defines.c  defines.h  esp_utils.c  fsm.c  fsm.h  main.c  motor.c  motor.h  movavg.h  path_following.c  path_following.h  pid.c  pid.h  scripting.c  scripting.h  states.h  states_attack.c  states_defence.c  states_general.c  utils.c  utils.h
omicam/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  backup_pi.sh  backup_sbc.sh  lsan_suppr.txt  omicam.frag  omicam.ini  omicam.vert  omicam_local.ini  omicam_thresh_test.txt  rays.tga  run.py  watch_cpu.sh
omicam/PandaUARTHack/: PandaUARTHack.ino
omicam/docs/: !OPROFILE_COMMAND.txt  CPU_Thresh.md  CUDA_Workarounds.md  DESCRIPTION.md  Faster Optimisation.md  Hybrid Localisation Plan.md  Matt objective function.md  Notes 22_06_20.txt  Old_Omicam_Description.md  Omicam Design Doc.md  REQUIRED_LIBRARIES.md  Replay file format.txt  Replay system refactor plan.txt  Virtual Poster Session Notes.md  libgdx shaders.txt
omicam/docs/cool field art/: README.md
omicam/docs/old stuff/: SDL_Problems.md
omicam/fields/: Ints_StandardField.ff
omicam/lib/: DG_dynarr.h  lodepng.c  lodepng.h  mathc.h  pb.h  qdbmp.c  qdbmp.h  rpa_queue.c  rpa_queue.h  tinyexpr.c  tinyexpr.h  zed_net.h
omicam/lib/dyad/: dyad.c  dyad.h
omicam/lib/log/: log.h
omicam/lib/nanopb/: pb.h
omicam/lib/omxcam/: omxcam.h
omicam/lib/raspicam/: RaspiCamControl.c  RaspiCamControl.h  RaspiCommonSettings.c  RaspiCommonSettings.h  RaspiHelpers.c  RaspiHelpers.h
omicam/lib/yacclab/: file_manager.cc  labeling_CUDA_BUF.cu  labeling_CUDA_BUF.cuh  system_info.h  utilities.cc
omicam/scripts/: FieldFile_pb2.py  dewarp.py  field_file_generator.py
omicam/scripts/FieldFileGenerator/: FieldFile_pb2.py  Ints_StandardField.ff  ausfield.ff  badfield.ff  field.ff  lineFunctions.py  line_function.py  main.py  objectiveFunction.py
omicam/src/: alloc_pool.c  alloc_pool.h  blob_detection.c  blob_detection.h  camera_manager.c  camera_manager.h  comms_uart.c  comms_uart.h  computer_vision.cpp  computer_vision.h  computer_vision.hpp  defines.h  gpu_manager.c  gpu_manager.h  localisation.c  localisation.h  main.c  movavg.c  movavg.h  remote_debug.c  remote_debug.h  replay.c  replay.h  utils.c  utils.h
omicam/src/cuda/: in_range.cu  in_range.cuh
omicam/src/protobuf/: FieldFile.options  FieldFile.pb.c  FieldFile.pb.h  FieldFile.proto  RemoteDebug.options  RemoteDebug.pb.c  RemoteDebug.pb.h  RemoteDebug.proto  Replay.options  Replay.pb.c  Replay.pb.h  Replay.proto  UART.options  UART.pb.c  UART.pb.h  UART.proto  proto_compile.sh
omicam/test/: README.txt
omicam/test_data/: orange_ball_480p.m4v
omicontrol/: .gitignore  README.md  build.gradle  model.csv  model.xlsx  model2.csv  model3.csv  settings.gradle
openmv/: README.md  hoteltrack.py  tracking.py  whitebal_cal.py
scripts/: README.md
scripts/cam_test/: image_filter_test.py
(+71 files in other folders)
